--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/14-09-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/14-09-2023.md
@@ -1,6 +1,6 @@
 #daily-note[[daily note canvas]] 
 **Random:**
-oggi ho imparato ad usare git, ho 
+oggi ho imparato ad usare git, ho collegato lenovo e pc, per pushare a icloud devo copiare ed incollare la cartella bruh...
 
 **Ideas:**
 
