--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/18-09-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/18-09-2023.md
@@ -1,6 +1,9 @@
 #daily-note[[daily note canvas]] 
 **Random:**
-
+basta sprecare tempo
+tel in bianco e nero
+meno youtube
+no insta
 
 **Ideas:**
 
