--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/26-09-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/26-09-2023.md
@@ -9,7 +9,7 @@
 
 
 **To Study:**
-finire appunti di fondamenti e algebra lineare (analisi I giä fatti)
-[[Informazione]] [[Spazi vettoriali]], fare compiti di Analisi I
+finire appunti di fondamenti e algebra lineare (analisi I già fatti)
+[[Informazione]]  e [[Spazi vettoriali]], fare compiti di Analisi I
 **UNI:**
 [[Insiemi]] [[Funzione]] [[Informazione]] 
