--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/27-09-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/27-09-2023.md
@@ -10,5 +10,7 @@
 
 **To Study:**
 studia slide iniziali di FdP: http://docenti.ing.unipi.it/m.cococcioni/FdP/parte_0.pdf
+esercizi di Analisi I
 
 **UNI:**
+[[Variabili]] [[C++]] 
