--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/28-09-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/28-09-2023.md
@@ -9,6 +9,9 @@
 
 
 **To Study:**
-
+compiti analisi I: esercizio e dimostrazione
+appunti di analisi I
+appunti di algebra lineare
 
 **UNI:**
+[[Valori Assoluti]] [[Matrici]] sistemi di equazioni lineare-omogenei
