--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/28-09-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/28-09-2023.md
@@ -9,9 +9,9 @@ ch#daily-note[[daily note canvas]]
 
 
 **To Study:**
-compiti analisi I: esercizio e dimostrazione
-appunti di analisi I
-appunti di algebra lineare
+- [x] compiti analisi I: esercizio e dimostrazione 
+- [x] appunti di analisi I 
+- [ ] appunti di algebra lineare [[29-09-2023]]
 
 **UNI:**
 [[Valori Assoluti]] [[Matrici]] sistemi di equazioni lineare-omogenei
