--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/29-09-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/29-09-2023.md
@@ -9,9 +9,10 @@
 
 
 **To Study:**
-- [ ] appunti di algebra lineare 28/09
+- [x] appunti di algebra lineare 28/09
 - [ ] appunti analisi I 29/09 + 28/09
-- [ ] codice algoritmo di Erone
+- [x] codice algoritmo di Erone
+- [ ] algebra lineare video di Gobbino
 
 **UNI:**
-[[Disuguaglianza Bernoulli]] [[Fattoriale]] [[Formula del Binomio]] [[Coefficiente Binomiale]] [[Algoritmo di Erone]] 
+[[Disuguaglianza Bernoulli]] [[Fattoriale]] [[Formula del Binomio]] [[Coefficiente Binomiale]] [[Algoritmo di Erone]] [[Basi della Logica]] [[Insiemi]] 
