--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/28-09-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/28-09-2023.md
@@ -11,7 +11,7 @@
 **To Study:**
 - [x] compiti analisi I: esercizio e dimostrazione 
 - [x] appunti di analisi I 
-- [ ] appunti di algebra lineare [[29-09-2023]]
+- [x] appunti di algebra lineare [[29-09-2023]]
 
 **UNI:**
 [[Valori Assoluti]] [[Matrici]] sistemi di equazioni lineare-omogenei
