--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/29-09-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/29-09-2023.md
@@ -10,10 +10,10 @@
 
 **To Study:**
 - [x] appunti di algebra lineare 28/09
-- [ ] appunti analisi I 29/09 + 28/09
+- [x] appunti analisi I 29/09
 - [x] codice algoritmo di Erone
-- [ ] algebra lineare video di Gobbino
-- [ ] riguarda tutti i file con gli argomenti [[30-09-2023]]
+- [x] algebra lineare video di Gobbino
+- [x] riguarda tutti i file con gli argomenti [[30-09-2023]]
 
 **UNI:**
-[[Disuguaglianza Bernoulli]] [[Fattoriale]] [[Formula del Binomio]] [[Coefficiente Binomiale]] [[Algoritmo di Erone]] [[Basi della Logica]] [[Insiemi]] 
+[[Disuguaglianza Bernoulli]] [[Fattoriale]] [[Binomio di Newton]] [[Coefficiente Binomiale]] [[Algoritmo di Erone]] [[Basi della Logica]] [[Insiemi]] 
