--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/08-10-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/08-10-2023.md
@@ -9,8 +9,8 @@
 
 
 **To Study:**
-- [ ] numeri complessi in forma trigonometrica
-- [ ] prodotto coniugato ed inverso
+- [x] numeri complessi in forma trigonometrica
+- [x] prodotto coniugato ed inverso
 - [ ] passaggio dalla forma algebrica a trigonometrica
 - [ ] radici n-esime di numeri complessi
 - [ ] teorema fondamentale dell'algebra
