--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/08-10-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/08-10-2023.md
@@ -11,9 +11,9 @@
 **To Study:**
 - [x] numeri complessi in forma trigonometrica
 - [x] prodotto coniugato ed inverso
-- [ ] passaggio dalla forma algebrica a trigonometrica
-- [ ] radici n-esime di numeri complessi
-- [ ] teorema fondamentale dell'algebra
+- [x] passaggio dalla forma algebrica a trigonometrica
+- [x] radici n-esime di numeri complessi
+- [ ] teorema fondamentale dell'algebra, dimostrazione tra i mess importanti sul gruppo ing inf I
 - [ ] cenni alla soluzione di equazione di terzo ordine
 - [ ] cenni alla definizione di logaritmo complesso
 - [ ] esercizi su estremo superiore e su numeri complessi
