--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/09-10-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/09-10-2023.md
@@ -9,6 +9,6 @@
 
 
 **To Study:**
-- [ ] chiedere a berselli se usiamo notazione $\theta$ tra zero e due pi greco o tra meno e più pi greco
+- [x] chiedere a berselli se usiamo notazione $\theta$ tra zero e due pi greco o tra meno e più pi greco
 
 **UNI:**
