--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/12-10-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/12-10-2023.md
@@ -6,11 +6,10 @@
 
 
 **Tasks:**
-- [ ] slide del cocco ( slide 33)
-- [ ] algebra lineare da gobbino
-- [x] appunti analisi I
+- [ ] eserciti analisi 12/10 x 13/10
 
 **To Study:**
-
+- [ ] appunti analisi I
+- [ ] appunti FdP
 
 **UNI:**
