--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/17-10-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/17-10-2023.md
@@ -6,8 +6,8 @@
 
 
 **Tasks:**
-- [ ] scrivere programma che calcola interesse composto
-- [ ] fare nota su obsidian per grafici, con una funzione che mostra l'andamento lineare delle aggiunte settimanali.
+- [x] scrivere programma che calcola interesse composto
+- [x] fare nota su obsidian per grafici, con una funzione che mostra l'andamento lineare delle aggiunte settimanali.
 - [ ] appunti analisi I
 **To Study:**
 
