--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/08-10-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/08-10-2023.md
@@ -14,8 +14,8 @@
 - [x] passaggio dalla forma algebrica a trigonometrica
 - [x] radici n-esime di numeri complessi
 - [x] teorema fondamentale dell'algebra, dimostrazione tra i mess importanti sul gruppo ing inf I
-- [ ] cenni alla soluzione di equazione di terzo ordine
-- [ ] cenni alla definizione di logaritmo complesso
+- [x] cenni alla soluzione di equazione di terzo ordine
+- [x] cenni alla definizione di logaritmo complesso
 - [ ] esercizi su estremo superiore e su numeri complessi
 - [x] definizione di parte intera di numero reale
 
