--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/24-10-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/24-10-2023.md
@@ -6,10 +6,7 @@
 
 
 **Tasks:**
-- [ ] slide del cocco ( slide 73)
-- [ ] Gobbino video 03
-- [x] appunti analisi I
-
+- [ ] Visita Medica Sportiva!!!
 **To Study:**
 
 
