--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/10-10-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/10-10-2023.md
@@ -6,8 +6,8 @@
 
 
 **Tasks:**
-- [ ] slide del cocco ( slide 73)
-- [ ] Gobbino video 03
+- [x] slide del cocco pt1-S.01
+- [x] Gobbino video 03
 - [x] appunti analisi I
 
 **To Study:**
