--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/24-10-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/24-10-2023.md
@@ -8,7 +8,7 @@
 **Tasks:**
 - [x] Visita Medica Sportiva!!!
 - [ ] sforazzini.com foto
-- [ ] portfolio su google drive
+- [x] portfolio su google drive
 
 **To Study:**
 
