--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/10-11-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/10-11-2023.md
@@ -7,9 +7,9 @@
 
 **Tasks:**
 - [ ] HOPITAL 
-- [ ] LE LISTE
-- [ ] OPERATORE FRECCIA
-- [ ] INSERIMENTO ID UN ELEMENTO I NTESTA
+- [x] LE LISTE
+- [x] OPERATORE FRECCIA
+- [x] INSERIMENTO ID UN ELEMENTO I NTESTA
 
 **To Study:**
 
