--- a/Dav Second Brain V1.2/Home/Daily Notes/2023/08-10-2023.md
+++ b/Dav Second Brain V1.2/Home/Daily Notes/2023/08-10-2023.md
@@ -16,7 +16,7 @@
 - [x] teorema fondamentale dell'algebra, dimostrazione tra i mess importanti sul gruppo ing inf I
 - [x] cenni alla soluzione di equazione di terzo ordine
 - [x] cenni alla definizione di logaritmo complesso
-- [ ] esercizi su estremo superiore e su numeri complessi
+- [x] esercizi su estremo superiore e su numeri complessi
 - [x] definizione di parte intera di numero reale
 
 **UNI:**
